<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meinung"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC400"
    tools:layout_editor_absoluteY="1dp">


    <!-- Bewertung hinzufügen  -->


    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFA000"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingRight="5dp"
        android:paddingBottom="15dp"
        android:text="@string/moderator_bewerten"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.054">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/name"
                android:maxWidth="50dp"
                tools:layout_conversion_absoluteWidth="653dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="textPersonName"
                    android:maxWidth="300dp"
                    android:minWidth="250dp"
                    tools:layout_conversion_absoluteHeight="56dp"
                    tools:layout_conversion_absoluteWidth="250dp"
                    tools:layout_editor_absoluteX="211dp"
                    tools:layout_editor_absoluteY="256dp">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:hint="@string/kommentar_optional"
                android:inputType="text|textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                tools:layout_conversion_absoluteHeight="61dp"
                tools:layout_conversion_absoluteWidth="653dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kommentarText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="text|textMultiLine"
                    android:maxWidth="800dp"
                    android:minWidth="300dp"
                    tools:layout_conversion_absoluteWidth="300dp"
                    tools:layout_editor_absoluteX="184dp"
                    tools:layout_editor_absoluteY="318dp">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <RatingBar
                android:id="@+id/sterneslide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/slider"
                android:gravity="center"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="5"
                app:layout_constraintBaseline_toBottomOf="parent"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="1733dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:text="@string/bewertung_abgeben"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="176dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/bewertung_2" />
        </LinearLayout>
    </ScrollView>

    <!-- Bewertung Ende -->

</androidx.constraintlayout.widget.ConstraintLayout>