<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rootPlaylistdetails"
    android:layout_height="match_parent"
    tools:context=".PlaylistDetailsActivity">
    <LinearLayout
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:orientation="vertical">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/container2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center_horizontal">

        </androidx.recyclerview.widget.RecyclerView>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:isScrollContainer="true"  >

        <LinearLayout
            android:id="@+id/t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container2"
            android:orientation="vertical">

        <!-- Bewertung hinzufügen  -->

            <TextView
                android:id="@+id/bewertung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/bewertung">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxWidth="50dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:inputType="textPersonName"
                    android:layout_width="wrap_content"
                    android:minWidth="250dp"
                    android:maxWidth="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textMultiLine"
                android:scrollbars="vertical"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"

                android:gravity="center"
                android:hint="@string/kommentar_optional">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kommentarText"
                    android:layout_width="wrap_content"
                    android:minWidth="300dp"
                    android:maxWidth="800dp"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

<LinearLayout
    android:layout_width="wrap_content"

    android:layout_height="wrap_content">

            <com.google.android.material.slider.Slider
                android:contentDescription="@string/slider"
                android:id="@+id/sterneslide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:stepSize="1"
                android:valueFrom="0"

                android:valueTo="5" />
    </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bewertung_abgeben">
            </com.google.android.material.button.MaterialButton>
        <!-- Bewertung Ende -->

        <androidx.recyclerview.widget.RecyclerView
            android:layout_weight="1"
            android:layout_marginTop="50dp"
            android:foregroundGravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/containerRating">

        </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>