<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hauptfenster"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC400">

    <ScrollView
        android:id="@+id/scrollview_mainactivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/moderatorImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/moderator_onair"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/moderatorNameTextView" />

        <TextView
            android:id="@+id/moderatorNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/moderator_onair"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@id/moderatorImageView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



        <RelativeLayout
                android:id="@+id/arg_music_panel_layout"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:background="@drawable/background_square"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:orientation="horizontal">

            <androidx.media3.ui.PlayerView
                android:id="@+id/player"

                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:shutter_background_color="#261A00"
                app:surface_type="none" />
        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_toEndOf="@id/player"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/title"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/theme_card_text"
                    android:textSize="25sp"
                    android:visibility="visible"
                    tools:visibility="visible" />
<com.google.android.material.divider.MaterialDivider
    android:layout_below="@id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background">
</com.google.android.material.divider.MaterialDivider>
                    <TextView
                        android:id="@+id/interpret"
                        android:layout_marginTop="40dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/theme_card_text"
                        android:textSize="25sp"
                        android:visibility="visible"
                        tools:visibility="visible" />
        </RelativeLayout>
                </RelativeLayout>

    <Button
        android:id="@+id/songwuenschen_btn"
        style="@style/myRadioButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/song_w_nschen"
        android:textAllCaps="false"
        android:textColorLink="#CB1818"
        android:textSize="34sp" />

            <Button
                android:id="@+id/playlists_btn"
                style="@style/myRadioButtonStyle"
                android:text="@string/playlists"
                android:textSize="34sp" />

            <Button
                android:id="@+id/deineMeinung_btn"
                style="@style/myRadioButtonStyle"
                android:text="@string/deine_meinung"
                android:textSize="34sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="30dp"
                android:background="@color/theme_card" />

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>